--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,2 +1,5 @@
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.connection.characterEncoding=utf-8 
+spring.jpa.properties.hibernate.connection.CharSet=utf-8 
+spring.jpa.properties.hibernate.connection.useUnicode=true
 spring.jpa.show-sql= true
